Kubernates_part/kube_pod_without_service_task_b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-nginx
  name: test-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-nginx
  template:
    metadata:
      labels:
        app: test-nginx
    spec:
      containers:
      - name: test-nginx
        image: akisele1/test:nginx_server
        ports:
        - containerPort: 443
          hostPort: 443
        - containerPort: 80
          hostPort: 80
