Kubernates_part/kube_pod_service_ingress_one_task_d.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-nginx
  name: test-nginx
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    name: http
    protocol: TCP
  - port: 443
    name: https
    protocol: TCP
    targetPort: 443
  selector:
    app: test-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-nginx
  name: test-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-nginx
  template:
    metadata:
      labels:
        app: test-nginx
    spec:
      containers:
      - name: test-nginx
        image: akisele1/test:nginx_server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: mytest.web
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-nginx
                port:
                  number: 80
